; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_compat.c_ev2_absent_file.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_delta/extr_compat.c_ev2_absent_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ev2_dir_baton = type { i32 }
%struct.change_node = type { i32, i32 }

@RESTRUCTURE_ADD_ABSENT = common dso_local global i32 0, align 4
@svn_node_file = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i8*, i32*)* @ev2_absent_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @ev2_absent_file(i8* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.ev2_dir_baton*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.change_node*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.ev2_dir_baton*
  store %struct.ev2_dir_baton* %11, %struct.ev2_dir_baton** %7, align 8
  %12 = load %struct.ev2_dir_baton*, %struct.ev2_dir_baton** %7, align 8
  %13 = getelementptr inbounds %struct.ev2_dir_baton, %struct.ev2_dir_baton* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i8*, i8** %4, align 8
  %16 = load i32*, i32** %6, align 8
  %17 = call i8* @map_to_repos_relpath(i32 %14, i8* %15, i32* %16)
  store i8* %17, i8** %8, align 8
  %18 = load %struct.ev2_dir_baton*, %struct.ev2_dir_baton** %7, align 8
  %19 = getelementptr inbounds %struct.ev2_dir_baton, %struct.ev2_dir_baton* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %8, align 8
  %22 = call %struct.change_node* @locate_change(i32 %20, i8* %21)
  store %struct.change_node* %22, %struct.change_node** %9, align 8
  %23 = load i32, i32* @RESTRUCTURE_ADD_ABSENT, align 4
  %24 = load %struct.change_node*, %struct.change_node** %9, align 8
  %25 = getelementptr inbounds %struct.change_node, %struct.change_node* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* @svn_node_file, align 4
  %27 = load %struct.change_node*, %struct.change_node** %9, align 8
  %28 = getelementptr inbounds %struct.change_node, %struct.change_node* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  %29 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %29
}

declare dso_local i8* @map_to_repos_relpath(i32, i8*, i32*) #1

declare dso_local %struct.change_node* @locate_change(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
